--- a/css/style.css
+++ b/css/style.css
@@ -440,3 +440,6 @@ body
   padding-right: 0;
   border-right: none;
 }
+.left-align {
+  float: left; /* Float the image to the left */
+  margin-right: 20px;
