--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,11 @@ h6,
     color: var(--primary);
   }
 }
-
+.hero-header {
+  background: url(/img/hero-image.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /*** Hero Header ***/
 .hero-header1 {
   background: url(/img/mango\ farm\ mango\ 123.jpeg);
@@ -376,8 +380,17 @@ body
   background: url(/img/mango\ farm\ mango\ 123.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
-
+.footer .over {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
 .footer p {
   font-size: 15px;
 }
@@ -450,7 +463,7 @@ body
   height: 100vh;
 }
 
-.owl-carousel .owl-stage-outer {
+.owl-carousel.hero-carousel .owl-stage-outer {
   height: 100vh;
 }
 
@@ -649,7 +662,7 @@ body
 
 .business .col-lg-3:nth-child(3) .clients {
   background-color: #96ff00;
-  padding: 2.3rem;
+  padding: 3rem;
 
   text-align: center;
 }
