--- a/css/style.css
+++ b/css/style.css
@@ -377,20 +377,9 @@ body
   background-position: 0px 112px, right 0 bottom 0, left 50% top 80px,
     left 50% bottom 0, top center;
   background-repeat: no-repeat; */
-  background: url(/img/mango\ farm\ mango\ 123.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  background-color: #cb4154 !important;
 }
-.footer .over {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: -1;
-}
+
 .footer p {
   font-size: 15px;
 }
