--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ body
   background-position: 0px 112px, right 0 bottom 0, left 50% top 80px,
     left 50% bottom 0, top center;
   background-repeat: no-repeat; */
-  background-color: #cb4154 !important;
+  background-color: #131d3b;
 }
 
 .footer p {
