--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 .call {
   position: fixed;
   right: 20px;
-  top: 70%;
+  top: 50%;
   background-color: #cb4154;
   z-index: 999;
   padding: 0.6rem;
@@ -35,31 +35,50 @@
 
 .whatsapp {
   position: fixed;
-  right: 0;
-  top: 20%;
+  right: 100px;
+  bottom: 0%;
   background-color: #ffd041;
-  z-index: 999;
+  z-index: 99;
   border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
-.whatsapp a .vertical {
-  transform: rotate(180deg);
-  writing-mode: vertical-lr;
+.whatsapp .vertical {
+  /* transform: rotate(180deg);
+  writing-mode: vertical-lr; */
   font-size: 15px;
   margin: 0;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-inline: 10px;
   color: white;
 }
 
-.whatsapp a {
-  transform: rotate(360deg);
-  width: 100%;
-  height: 100%;
+.whatsapp .notify .notify-img {
 }
 
+.whatsapp .notify .notify-img img {
+  width: 100%;
+}
+.whatsapp .notify {
+  position: fixed;
+  width: 200px;
+  z-index: 999;
+  right: 70px;
+  bottom: 45px;
+  animation: notify 3s infinite;
+}
+@keyframes notify {
+  0% {
+    transform: translateY(5px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
+}
 .call i {
   font-size: 2rem;
   color: var(--primary);
@@ -70,7 +89,7 @@
 .back-to-top {
   position: fixed;
   display: none;
-  right: 45px;
+  right: 20px;
   bottom: 45px;
   z-index: 99;
 }
