--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ h6,
 }
 
 .hero-header2 {
-  background: url(/img/hero-slider2.jpeg);
+  background: url(/img/inestment.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 
