--- a/css/style.css
+++ b/css/style.css
@@ -249,13 +249,13 @@ h6,
   }
 }
 .hero-header {
-  background: url(/img/hero-image.jpeg);
+  background: url(../img/hero-image.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 /*** Hero Header ***/
 .hero-header1 {
-  background: url(/img/about.png);
+  background: url(../img/hero-slider1.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
@@ -269,7 +269,7 @@ h6,
 }
 
 .hero-header2 {
-  background: url(/img/about.png);
+  background: url(../img/hero-slider2.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
 
