--- a/css/style.css
+++ b/css/style.css
@@ -947,3 +947,10 @@ transform: scale(0.6) translateY(-0.5rem) translateX(0.05rem);
               box-shadow:inset 4px 4px 8px #ffd041,inset -4px -4px 8px #ffd041;
               transform: scale(1.05);
           }
+
+.project-highlights .img{
+  height: 200px;
+}
+.project-highlights .img img{
+  height: 100%;
+}
