--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ h6,
   background-size: cover;
 }
 .hero-header-invest{
-  background: url(../img/invest200.jpg);
+  background: url(../img/inestment.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center ;
