--- a/css/style.css
+++ b/css/style.css
@@ -206,9 +206,20 @@ h6,
 }
 
 @media (max-width: 991.98px) {
+  .navbar-light.sticky{
+    /* position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 9999; */
+  }
   .sticky-top.navbar-light {
-    position: relative;
+    position: fixed;
     background: #ffffff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   }
 
   .navbar-light .navbar-collapse {
