--- a/css/style.css
+++ b/css/style.css
@@ -401,6 +401,7 @@ border-bottom: 1px solid green;
   color: rgba(255, 255, 255, 0.5);
 }
 
+
 body > div > div.container-xxl.position-relative.p-0 > div > div > div.owl-nav {
 }
 body
@@ -423,6 +424,9 @@ body
   color: white;
   font-size: 25px;
   z-index: 9999;
+}
+.owl-nav{
+  display: none;
 }
 body
   > div
