--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@ body
   height: 100%;
   
 }
+
 .about{
  
   padding-bottom: 5rem;
@@ -1071,3 +1072,11 @@ transform: scale(0.6) translateY(-0.5rem) translateX(0.05rem);
     top: 0;
     left: 0;
   }
+  /* @media (max-width: 768px) {
+    .col-lg-6-vision{
+    img {
+        max-width: 100% ; 
+        height: auto !important; 
+    }
+}
+  } */
